--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Welcome!</h1>
+        <h1>
+▓█████  ███▄    █ ▓█████▄  ██▓    ▓█████   ██████   ██████     ▄▄▄       ██▓███   ██▓███  ▓█████▄▄▄█████▓ ██▓▄▄▄█████▓▓█████ 
+▓█   ▀  ██ ▀█   █ ▒██▀ ██▌▓██▒    ▓█   ▀ ▒██    ▒ ▒██    ▒    ▒████▄    ▓██░  ██▒▓██░  ██▒▓█   ▀▓  ██▒ ▓▒▓██▒▓  ██▒ ▓▒▓█   ▀ 
+▒███   ▓██  ▀█ ██▒░██   █▌▒██░    ▒███   ░ ▓██▄   ░ ▓██▄      ▒██  ▀█▄  ▓██░ ██▓▒▓██░ ██▓▒▒███  ▒ ▓██░ ▒░▒██▒▒ ▓██░ ▒░▒███   
+▒▓█  ▄ ▓██▒  ▐▌██▒░▓█▄   ▌▒██░    ▒▓█  ▄   ▒   ██▒  ▒   ██▒   ░██▄▄▄▄██ ▒██▄█▓▒ ▒▒██▄█▓▒ ▒▒▓█  ▄░ ▓██▓ ░ ░██░░ ▓██▓ ░ ▒▓█  ▄ 
+░▒████▒▒██░   ▓██░░▒████▓ ░██████▒░▒████▒▒██████▒▒▒██████▒▒    ▓█   ▓██▒▒██▒ ░  ░▒██▒ ░  ░░▒████▒ ▒██▒ ░ ░██░  ▒██▒ ░ ░▒████▒
+░░ ▒░ ░░ ▒░   ▒ ▒  ▒▒▓  ▒ ░ ▒░▓  ░░░ ▒░ ░▒ ▒▓▒ ▒ ░▒ ▒▓▒ ▒ ░    ▒▒   ▓▒█░▒▓▒░ ░  ░▒▓▒░ ░  ░░░ ▒░ ░ ▒ ░░   ░▓    ▒ ░░   ░░ ▒░ ░
+ ░ ░  ░░ ░░   ░ ▒░ ░ ▒  ▒ ░ ░ ▒  ░ ░ ░  ░░ ░▒  ░ ░░ ░▒  ░ ░     ▒   ▒▒ ░░▒ ░     ░▒ ░      ░ ░  ░   ░     ▒ ░    ░     ░ ░  ░
+   ░      ░   ░ ░  ░ ░  ░   ░ ░      ░   ░  ░  ░  ░  ░  ░       ░   ▒   ░░       ░░          ░    ░       ▒ ░  ░         ░   
+   ░  ░         ░    ░        ░  ░   ░  ░      ░        ░           ░  ░                     ░  ░         ░              ░  ░
+                   ░                                                                                                         
+</h1>
     </header>
-    <main>
-        <div id="game-container">
-            <p>WORK IN PROGRESS</p>
-        </div>
-    </main>
+    <main>    </main>
     <footer>
         <p>&copy; 2025 Ivan Belousov. All rights reserved.</p>
     </footer>
