--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
     <script>
         const bgMusic = document.getElementById('bgMusic');
         bgMusic.volume = 0.5;
+
+        // Resume from last position if exists
+        const lastTime = sessionStorage.getItem('musicTime');
+        if (lastTime) {
+            bgMusic.currentTime = parseFloat(lastTime);
+        }
         bgMusic.play();
+
+        // Update time in storage periodically
+        setInterval(() => {
+            sessionStorage.setItem('musicTime', bgMusic.currentTime);
+        }, 1000);
         
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
+                sessionStorage.setItem('musicTime', bgMusic.currentTime);
                 window.location.href = 'controls.html';
             }
         });
