--- a/controls.html
+++ b/controls.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="bgMusic" autoplay loop>
-        <source src="Underclocked - Eric Skiff.mp3" type="audio/mpeg">
-    </audio>
     <div class="welcome">Welcome!</div>
     <div class="welcome-message">This is a simple story driven game about binge eating. You just gotta click 1, 2, or 3 to select your dialogue of choice, and the story will act out based on your decision. Also, when you are prompted to interact you just have to click space. Have fun! <br>
         <p>|-----------------------|</p>
@@ -24,30 +21,16 @@
         <p>&copy; 2025 Ivan Belousov. All rights reserved.</p>
     </footer>
 
+    <script src="music.js"></script>
     <script>
-        const bgMusic = document.getElementById('bgMusic');
-        bgMusic.volume = 0.5;
-
-        // Resume from last position if exists
-        const lastTime = sessionStorage.getItem('musicTime');
-        if (lastTime) {
-            bgMusic.currentTime = parseFloat(lastTime);
-        }
-        bgMusic.play();
-
-        // Update time in storage periodically
-        setInterval(() => {
-            sessionStorage.setItem('musicTime', bgMusic.currentTime);
-        }, 1000);
+        musicPlayer.play();
         
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                sessionStorage.setItem('musicTime', bgMusic.currentTime);
                 window.location.href = 'game.html';
             }
             if (event.key === 'Backspace') {
                 event.preventDefault();
-                sessionStorage.setItem('musicTime', bgMusic.currentTime);
                 window.location.href = 'index.html';
             }
         });
