--- a/index.html
+++ b/index.html
@@ -8,34 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="bgMusic" autoplay loop>
-        <source src="Underclocked - Eric Skiff.mp3" type="audio/mpeg">
-    </audio>
     <img src="logo.webp" alt="Endless Appetite Logo" class="background-logo">
     <div class="start-text">Press Enter to start</div>
     <footer>
         <p>&copy; 2025 Ivan Belousov. All rights reserved.</p>
     </footer>
 
+    <script src="music.js"></script>
     <script>
-        const bgMusic = document.getElementById('bgMusic');
-        bgMusic.volume = 0.5;
-
-        // Resume from last position if exists
-        const lastTime = sessionStorage.getItem('musicTime');
-        if (lastTime) {
-            bgMusic.currentTime = parseFloat(lastTime);
-        }
-        bgMusic.play();
-
-        // Update time in storage periodically
-        setInterval(() => {
-            sessionStorage.setItem('musicTime', bgMusic.currentTime);
-        }, 1000);
+        musicPlayer.play();
         
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                sessionStorage.setItem('musicTime', bgMusic.currentTime);
                 window.location.href = 'controls.html';
             }
         });
