Finished up game.html, added music, optimized audio files, added video, added favicon.

--- a/controls.html
+++ b/controls.html
@@ -6,17 +6,18 @@
     <meta name="description" content="A terminal-style game about binge eating.">
     <title>Endless Appetite</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="welcome">Welcome!</div>
-    <div class="welcome-message">This is a simple story driven game about binge eating. You just gotta click 1, 2, or 3 to select your dialogue of choice, and the story will act out based on your decision. Also, when you are prompted to interact you just have to click space. Have fun! <br>
+    <div class="welcome-message">This is a simple story driven game about binge eating. You just gotta click 1, 2, or 3 to select your dialogue of choice, and the story will act out based on your decision. Have fun! <br>
         <p>|-----------------------|</p>
         <p>1, 2, or 3 - Select</p>
-        <p>Space - Interact</p>
+        <p>Space - Continue</p>
         <p>Backspace - Go Back</p>
         <p>|-----------------------|</p>
     </div>
-    <div class="continue">Press Enter to continue...</div>
+    <div class="continue">Press Enter to start...</div>
     <footer>
         <p>&copy; 2025 Ivan Belousov. All rights reserved.</p>
     </footer>
