--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A terminal-style game about binge eating.">
     <title>Endless Appetite</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <img src="logo.webp" alt="Endless Appetite Logo" class="background-logo">
